@@ -1,6 +1,10 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  10 Jul 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: removed some
+  bogus code that snuck in.  pkg_setup() is no longer called when installing a
+  tbz2.  All tbz2 stuff should be done in pkg_pre/postinst().
+
 *portage-2.0.12 (10 Jul 2002)
 
   10 Jul 2002; Daniel Robbins <drobbins@gentoo.org> ccache support is now
